style.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  body {
    @apply font-body text-base;
  }
  h1,
  h2 {
    @apply font-heading font-bold;
  }
  h1 {
    @apply text-7xl mb-5;
  }
  h2 {
    @apply text-4xl;
  }
  hr {
    @apply bg-[#F1F3F8] border-none h-[2px] my-10;
  }
  footer {
    @apply bg-black-dark text-white;
  }
  footer a {
    @apply hover:underline hover:text-secondary;
  }
}

@layer utilities {
  .grid-center {
    @apply grid justify-items-center content-center;
  }
  .flex-center {
    @apply flex justify-center items-center;
  }
  .flex-col-center {
    @apply flex flex-col justify-center items-center;
  }
  .container {
    @apply py-16 md:px-16 px-8 w-screen mx-auto;
  }
  .col-md-2 {
    @apply grid-cols-1 md:grid-cols-2;
  }
  .col-md-3 {
    @apply grid-cols-1 md:grid-cols-3;
  }
  .hide-mobile {
    @apply hidden md:block !important;
  }
  .hide-desktop {
    @apply block md:hidden !important;
  }
  .bg-image-cover {
    @apply bg-cover bg-no-repeat bg-center bg-scroll;
  }
}

@layer components {
  /* Navbar */
  .navbar {
    @apply navbar-mobile md:navbar-desktop;
  }
  .navbar-mobile {
    width: calc(100% - 4rem);
    @apply absolute top-full left-auto rounded right-auto flex flex-col items-center py-8 
    bg-white gap-y-4;
  }
  .navbar-desktop {
    @apply md:static md:flex md:bg-transparent md:flex-row md:items-center md:mr-0 
    md:w-fit md:border-t-0 md:text-white md:px-5 md:rounded-bl-xl md:py-0 !important;
  }
  .navbar a {
    @apply mx-3 text-gray text-sm;
  }
  .blur-circle {
    -webkit-backface-visibility: hidden;
    -webkit-transform: translateZ(0) scale(1, 1);
    @apply bg-primary w-64 h-64 blur-[500px];
  }
  /* About us section */
  /* .about-us-section {
    @apply pl-20;
  } */
  .about-us-section h4 {
    @apply text-lg font-medium w-fit rounded-lg text-primary bg-secondary
      py-3 px-7 mb-10;
  }
  .about-us-section h2 {
    @apply font-medium text-5xl mb-8;
  }
  .about-us-section p {
    @apply text-black-light text-lg mb-12;
  }
  /* Pricing card */
  .pricing-card {
    @apply h-max font-medium border-2 border-[#F1F3F8] rounded-[40px] pt-12;
  }
  .pricing-card h3 {
    @apply text-xl text-[#A0A0A0] mb-2 px-11;
  }
  .pricing-card div {
    @apply flex items-end px-11;
  }
  .pricing-card h4 {
    @apply text-6xl text-[#2F2F2F] mr-2;
  }
  .pricing-card p {
    @apply text-3xl text-[#C6C6C6] line-through decoration-[#FF4E4E] decoration-2;
  }
  .pricing-card h5 {
    @apply font-heading  text-[#929292] text-sm mb-4 px-11;
  }
  .pricing-card li {
    @apply text-lg text-[#393939] mb-3 px-11;
  }
  .pricing-card a {
    @apply w-full rounded-full rounded-tr-none mt-16 py-5 !important;
  }
  /* FAQ container */
  .faq-container {
    @apply shadow-xl py-4 px-8;
  }
  .faq-container button {
    @apply font-semibold text-lg;
  }
  .faq-container p {
    @apply text-[#363049] text-sm hidden;
  }
  /* Footer section */
  .footer-section h3,
  .footer-section figure {
    @apply mb-6;
  }
  .footer-section li,
  .footer-section p,
  .footer-section a {
    @apply mb-2 block;
  }
  /* Buttons */
  .btn {
    /* py-4 px-6 */
    @apply inline-block py-3 px-8  text-sm font-semibold 
    rounded shadow-md hover:bg-opacity-50 hover:no-underline !important;
  }
  .btn-primary {
    @apply bg-primary text-white  !important;
  }
  /* hover:border-primary hover:bg-transparent hover:text-black-dark */
  .btn-secondary {
    @apply bg-white text-black-dark !important;
  }
  .btn-tertiary {
    @apply bg-tertiary text-white !important;
  }
}

